@@ -48,11 +48,13 @@ urchinTracker();
 	<li><b>Tagging</b><br>
 	No need to organise your documents into rigid directory trees &mdash; with Referencer you can use tags to categorise your documents.
 	</li>
-	<li><b>Automatic arXiv metadata retrieval</b><br>
-	If you show Referencer a PDF which has an <a href="http://www.arxiv.org">arXiv</a> ID, Referencer will retrieve the metadata for this document over the internet.
+	<li><b>Automatic arXiv, PubMed and CrossRef metadata retrieval</b><br>
+	If you show Referencer a PDF which has an <a href="http://www.arxiv.org">arXiv</a> ID or <a href="http://www.doi.org/">DOI</a> code, Referencer will retrieve the metadata for this document over the internet.
 	</li>
 	</ul>
+	<!--
 	<p style="background:#C8C8D0; border:1px solid; padding:5px; margin-right:5px"><img src="warning.png" style="float:left;"><b>CrossRef users:</b>  The crossref.org OpenURL interface now requires user registration, and thus is not working with Referencer at the moment.  Alternatives are under investigation for the next release.</p>
+	-->
 	</div>
 	
 	<div id="screenshots">
@@ -127,7 +129,7 @@ urchinTracker();
 
 
 <div id="footer">
-	<p>Copyright © 2007 John Spray</p>
+	<p>Copyright © 2007 John Spray.  MEDLINE is a registered trademark of the U.S. National Library of Medicine.  DOI is a registered trademark of The International DOI Foundation.</p>
 </div>
 
 </div>
